Copied OpenGL (≥ 2.x) tutorial
- from http://en.wikibooks.org/wiki/OpenGL_Programming/Modern_OpenGL_Introduction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required ( VERSION 2.8 )
 
 add_subdirectory ( try1 )
+add_subdirectory ( try2 )
 
 # vim:set tabstop=4 shiftwidth=4 autoindent fo=cqwan :
 
