Tutorial example draws a triangle.

--- a/try2/CMakeLists.txt
+++ b/try2/CMakeLists.txt
@@ -5,6 +5,8 @@ add_executable ( Try2
 	try2.cxx
 )
 
+set (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
+
 include ( useX11 )
 include ( useOpenGL )
 include  ( useGLUT )
