All subprojects are C++11.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required ( VERSION 2.8 )
+project ( OpenGL_Experiments )
 
+add_definitions (-std=c++11)
+
+include_directories ( "include" )
 add_subdirectory ( try1 )
 add_subdirectory ( try2 )
 
